lua/examples/lua-test-suite/IntelliJ-Luanalysis/src/test/resources/inspections/trailing_type.lua.fail
local a ---@type number

---@param num number
local function wantsNumber(num) end

wantsNumber(a)

local b = <error descr="Type mismatch. Required: 'number' Found: '\"hello\"'">"hello"</error> ---@type number
